--- a/ui/style.css
+++ b/ui/style.css
@@ -20,4 +20,9 @@ body {
 .img-medium {
     height: 200px;
 }
-
+.container {
+    max-width:800px;
+    margin:0 auto;
+    color:grey;
+    font-family:comic-sans;
+        }
