--- a/ui/style.css
+++ b/ui/style.css
@@ -1,7 +1,5 @@
 body {
-    font-family: sans-serif;
-    background-color: DarkBlue;
-    margin-top: 75px;
+    margin-top: 60px;
     color: white;
 }
 
@@ -25,4 +23,6 @@ body {
     margin:0 auto;
     color:grey;
     font-family:comic-sans;
+    padding-left:20px;
+    padding-right:20px;
         }
