--- a/ui/style.css
+++ b/ui/style.css
@@ -22,7 +22,7 @@ body {
     max-width:800px;
     margin:0 auto;
     color:grey;
-    font-family:Comic-Sans;
+    font-family:Comic Sans;
     padding-left:20px;
     padding-right:20px;
         }
