--- a/ui/style.css
+++ b/ui/style.css
@@ -1,5 +1,5 @@
 body {
-    margin-top: 60px;
+   margin-top: 60px;
     color: white;
 }
 
@@ -26,3 +26,9 @@ body {
     padding-left:20px;
     padding-right:20px;
         }
+#main-text{
+    margin-top: 60px;
+    color: white;
+    text-align: center;
+    font-weight: bold;
+}
